# profiling

./: .gitignore  .travis.yml  AUTHORS  COPYRIGHT  HISTORY.md  Makefile.am  Makefile.in  PackageInfo.g  README  README.md  autogen.sh  configure.ac  init.g  makedoc.g  read.g
.github/workflows/: CI.yml  manual.yml
FlameGraph/: README-GAPProfiling  difffolded.pl  flamegraph.pl  stackcollapse-elfutils.pl  stackcollapse-gdb.pl  stackcollapse-instruments.pl  stackcollapse-jstack.pl  stackcollapse-perf.pl  stackcollapse-recursive.pl  stackcollapse-stap.pl  stackcollapse-vtune.pl  stackcollapse.pl
FlameGraph/dev/: hcstackcollapse.pl  hotcoldgraph.pl  thcstackcollapse.pl
_data/: package.yml
data/: sorttable.js
doc/: chap0.html  chap0.html-e  chap0.txt  chap0_mj.html  chap0_mj.html-e  chap1.html  chap1.html-e  chap1.txt  chap1_mj.html  chap2.html  chap2.txt  chap2_mj.html  chapInd.html  chapInd.txt  chapInd_mj.html  chapInd_mj.html-e  tutorial.autodoc
gap/: profiling.gd  profiling.gi
src/: json_parse_picojson.h  json_parse_rapidjson.h  md5.c  md5.cc  md5.h  profiling.cc
src/gap_cpp_headers/: gap_cpp_mapping.hpp  gap_exception.hpp  gap_function.hpp  gap_prototypes.hpp  gap_wrapping.hpp  optional.hpp  vec1.hpp
src/picojson/: picojson.h
src/rapidjson/: rapidjson.h
tst/: checkcoverage.tst  checknoreturn.tst  checkprof-res.tst  checkprof.tst  colour.tst  genprof.tst  test_colour.tst  testall.g  testcode1.g  testcode2.g  testcodenoreturn.g
tst/tst4.8/: checkmultfiles.tst  checknoreturn.tst  read.tst
tst/tst4.9/: checkmultfiles.tst  checknoreturn.tst
(+10 files in other folders)
